--- a/I0322023_Modul-06/Example.ipynb
+++ b/I0322023_Modul-06/Example.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Halo Praktikan!\n"
+     ]
+    }
+   ],
    "source": [
     "def salam():\n",
     "    print(\"Halo Praktikan!\")\n",
@@ -53,9 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "Ada di luar fungsi\n"
+     ]
+    }
+   ],
    "source": [
     "def greet():\n",
     "    print('Hello World!')\n",
@@ -226,9 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hasil = 50\n"
+     ]
+    }
+   ],
    "source": [
     "def tambah(*data):\n",
     "    # data tipenya adalah tuple\n",
@@ -250,9 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nama': 'Aji', 'alamat': 'Cirebon'}\n",
+      "{'nama': 'Hani', 'alamat': 'Bogor'}\n"
+     ]
+    }
+   ],
    "source": [
     "#membuat fungsi cetak dengan argumen *kwargs\n",
     "def cetak(**mahasiswa):\n",
@@ -298,9 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function(food):\n",
     "  for x in food:\n",
@@ -321,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3! = 6\n"
+      "4! = 24\n"
      ]
     }
    ],
@@ -354,9 +398,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Aku mau makan nih'\n",
+      "'\\u0202ku ma\\u0216 ma\\u020an y\\u04e7y\\u04e7'\n"
+     ]
+    }
+   ],
    "source": [
     "teks = 'Aku mau makan nih'\n",
     "print(ascii(teks))\n",
@@ -375,9 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n",
+      "<class 'int'>\n",
+      "N\n",
+      "<class 'str'>\n",
+      "78\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "integer = 78\n",
     "print(integer)\n",
@@ -402,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -412,18 +478,8 @@
       "b''\n",
       "b'\\x00\\x00\\x00\\x00\\x00'\n",
       "<class 'bytes'>\n",
-      "b'\\x02\\x03\\x04\\x06'\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "bytes must be in range(0, 256)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-f12baed79d30>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mangka_besar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m300\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mangka_besar\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: bytes must be in range(0, 256)"
+      "b'\\x02\\x03\\x04\\x06'\n",
+      "b'\\x03\\x02\\x01<'\n"
      ]
     }
    ],
@@ -438,7 +494,7 @@
     "list = bytes([2,3,4,6])\n",
     "print(list)\n",
     "\n",
-    "angka_besar = bytes([3,2,1,300])\n",
+    "angka_besar = bytes([3,2,1,60])\n",
     "print(angka_besar)"
    ]
   },
@@ -488,9 +544,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "panjang list adalah: 7\n"
+     ]
+    }
+   ],
    "source": [
     "angka = [3,4,7,11,18,29,42]\n",
     "print(f'panjang list adalah: {len(angka)}')"
@@ -513,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
